# Hunter-Radar

./: .gitignore  Hunter Radar-v1.3-1.4-merged-reference.md  Hunter-Radar-v1.4-implementation-todo.md  README.md  control.sh  daily-standup.md  frontend-plan.md  frontend-v2-architecture.canvas.data.json  frontend-v2-architecture.canvas.tsx  wipe_and_rehydrate.py
hunter-radar/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
hunter-radar/backend/app/: __init__.py  main.py  static_serve.py
hunter-radar/backend/dags/: ats_cron.py  hunter_radar_eod.py  options_cron.py
hunter-radar/backend/etl/: __init__.py  ats_scraper.py  backtest_dataset.py  backtest_dataset_real.py  backtest_event_goldset.py  edgar_fulltext.py  edgar_real.py  finra_short.py  load_ats_short.py  load_daily_price.py  load_divergence.py  load_etf_proxy.py  load_form4.py  load_options_chain.py  load_short_ratio.py  load_short_volume.py  load_threat_score.py  market_data_provider.py  pipeline.py  proxy_pool.py  refresh_data_status.py  retry_policy.py  sec_form4.py  symbol_seed.py  validation.py  yfinance_pull.py
hunter-radar/backend/scripts/: _dbg.py  eval_evaluator_evaluations.py  freeze_check.py  m10t1_test_edgar_real.py  m10t2_test_etf_real.py  m10t3_test_analytics_real.py  m10t4_test_admin_role_audit.py  m10t5_test_reviewer_cli_replace.py  m10t6_test_scipy_replace.py  m10t7_p2_merge.py  m10t7_test_p2_merge.py  m10t8_test_v152_finalize.py  m11t1_test_auth_all_export.py  m11t2_test_admin_role_ip_integration.py  m11t3_test_role_extension.py  m11t4_test_reviewer_cli_toolchain.py  m11t5_test_p2_json_only.py  m11t6_test_v153_finalize.py  m12t1_test_super_admin_role.py  m12t2_test_m7t2_deletion.py  m12t3_test_openapi_endpoint_review.py  m15t1_test_freeze_automation.py  m15t2_test_self_test_harness.py  m15t3_test_v157_handoff.py  m15t4_test_ci_integration.py  m16t1_test_eval_archive.py  m16t2_test_eval_archive_extended.py  m16t3_test_harness_enhanced.py  m16t4_test_freeze_diff.py  m19t4_test_rag.py  (+62 more)
(+246 files in other folders)
