[project]
name = "hunter-radar-backend"
version = "1.4.0"
description = "Hunter Radar V1.4 — 美股盘后另类数据雷达后端"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # DB
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    # Cache / Queue
    "redis>=5.2.0",
    # ETL
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "yfinance>=0.2.50",
    # ATS Fallback Scraper (V1.5.9)
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    # Auth / Billing
    "authlib>=1.3.2",
    "stripe>=11.0.0",
    # Observability
    "sentry-sdk[fastapi]>=2.16.0",
    "structlog>=24.4.0",
    # OpenAPI
    "fastapi-utils>=0.1.0",
    # Web Push
    "pywebpush>=2.0.0",
    # Utils
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "orjson>=3.10.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
]
# airflow = [
#     "apache-airflow>=2.10.0",
#     "apache-airflow-providers-postgres>=5.10.0",
#     "apache-airflow-providers-redis>=3.10.0",
# ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
